# DP_catalog

./: README.md  pyproject.toml
config/: settings.py
main/: urls.py  views.py
main/templates/main/: contacts.html  home.html
