[tool.poetry]
name = "dp-catalog"
version = "0.1.0"
description = ""
authors = ["d.larin <larin.dn@icloud.com>"]
readme = "README.md"
packages = [{include = "dp_catalog"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
